--- a/custom/plugin-ltr/build.gradle
+++ b/custom/plugin-ltr/build.gradle
@@ -8,11 +8,11 @@ dependencies {
 
     compile 'com.alibaba:fastjson:1.2.67'
 
-    api project(':lucene:core')
-    api project(':lucene:queries')
+    implementation project(':lucene:core')
+    implementation project(':lucene:queries')
 
-    api project(':solr:core')
-    api project(':solr:contrib:ltr')
+    implementation project(':solr:core')
+    implementation project(':solr:contrib:ltr')
 
     testImplementation group: 'junit', name: 'junit', version: '4.12'
     testImplementation project(':solr:test-framework')
