--- a/settings.gradle
+++ b/settings.gradle
@@ -74,3 +74,4 @@ include "custom:plugin-ltr"
 include "custom:plugin-parser"
 include "custom:plugin-rerank"
 include "custom:plugin-table"
+include "custom:plugin-component"
